...
            Positioned(
              left: 24.w,
              right: 24.w,
              bottom: 48.h,
              child: CompletionButton(
                isEnabled: _rating != null,
                buttonText: '다음',
                enabledOnPressed: () => setState(() => _step = 2),
              ),
            ),
          ],
        ),
      ),
...
