...
        selectedItemConditionTypes.isNotEmpty;
  }

  @override
  Widget build(BuildContext context) {
    // 수정 / 등록
    final String modeText = widget.isEditMode ? '수정' : '등록';

    if (_isInitLoading) {
      return const RegisterInputFormSkeleton();
    }

    return GestureDetector(
...
